<resources>
    <string name="app_name" translatable="false">Chanu</string>
    <string name="thread_activity">Thread</string>
    <string name="board_activity">Board</string>
    <string name="purchase_menu">Purchase</string>
    <string name="about_activity">About</string>
    <string name="thread_post_image">Thread Image</string>
    <string name="thread_post_image_expanded">Expanded Thread Image</string>
    <string name="thread_post_expand_button">Expand</string>
    <string name="thread_post_collapse_button">Collapse</string>
    <string name="thread_country_flag">Country Flag</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter text</string>
    <string name="search_results_title">Search Results</string>
    <string name="board_search_results">Threads matching \"%1$s\"</string>
    <string name="board_search_no_results">No threads matching \"%1$s\"</string>
    <string name="thread_search_results">Posts matching \"%1$s\"</string>
    <string name="thread_search_no_results">No posts matching \"%1$s\"</string>
    <string name="blocklist_title">Blocklist</string>
    <string name="blocklist_title_with_type">%1$s Blocklist</string>
    <string name="blocklist_add_id_confirm">Add %1$s%2$s %3$s to blocklist?</string>
    <string name="blocklist_select_type">Select Block Type</string>
    <string name="blocklist_no_types_found">No blockable tripcode, name, email or id found</string>
    <string name="blocklist_empty">Blocklist is empty</string>
    <string name="delete_post_title">Delete Post</string>
    <string name="delete_post_title_confirm">Password for Delete</string>
    <string name="delete_post_password_hint">Password for Post</string>
    <string name="delete_post_enter_password">Enter a password to delete</string>
    <string name="delete_post_deleting">Deleting Post...</string>
    <string name="delete_post_deleting_image">Deleting Post Image...</string>
    <string name="delete_post_error">Couldn\'t delete post</string>
    <string name="delete_post_no_response">Couldn\'t delete post, no response</string>
    <string name="delete_post_cancelled">Cancelled delete post</string>
    <string name="delete_post_successful">Deleted post</string>
    <string name="delete_post_successful_image">Deleted post image</string>
    <string name="delete_post_response_error">Couldn\'t delete post, unknown response</string>
    <string name="delete_post_only_image">Delete Only Image?</string>
    <string name="connect_to_billing_msg">Connecting to Google Play...</string>
    <string name="purchase_error">Couldn\'t purchase, try again later</string>
    <string name="purchase_success">Ads are now disabled</string>
    <string name="dialog_color_picker_title">Pick a Color</string>
    <string name="report_post_title_type">Reason for report</string>
    <string name="report_post">Report</string>
    <string name="report_post_select_type">Select a report type</string>
    <string name="report_post_reporting">Reporting...</string>
    <string name="report_post_successful">Reported post</string>
    <string name="report_post_cancelled">Cancelled report post</string>
    <string name="report_post_error">Couldn\'t report post</string>
    <string name="report_post_no_response">Couldn\'t report post, no response</string>
    <string name="report_post_bug_warning">Due to a 4chan limitation, only post %1$s will be reported</string>
    <string name="authorize_pass_successful">Authorized</string>
    <string name="authorize_pass_cancelled">Cancelled authorization</string>
    <string name="authorize_pass_error">Couldn\'t authorize</string>
    <string name="authorize_pass_no_response">Couldn\'t authorize, no response</string>
    <string name="logout_pass_successful">Pass logout successful</string>
    <string name="logout_pass_cancelled">Cancelled pass logout</string>
    <string name="logout_pass_error">Couldn\'t logout</string>
    <string name="logout_pass_no_response">Couldn\'t logout, no response</string>
    <string name="web_image_title">Attach Image from Web</string>
    <string name="web_image_search_title">Search Web for Image</string>
    <string name="web_image_url_text_hint">Image Url</string>
    <string name="web_image_search_text_hint">search text</string>
    <string name="web_image_key_download">Load</string>
    <string name="web_image_button_download">Download</string>
    <string name="web_image_button_attach">Attach</string>
    <string name="web_image_input_url_first">Enter url to download image</string>
    <string name="web_image_download_first">Download image before attaching</string>
    <string name="settings_menu">Settings</string>
    <string name="global_rules_menu">Global rules</string>
    <string name="board_rules_menu">Board rules</string>
    <string name="play_thread_menu">Play thread</string>
    <string name="play_thread_stop_menu">Stop thread</string>
    <string name="refresh_board_menu">Refresh</string>
    <string name="jump_menu">Jump</string>
    <string name="scroll_to_top_menu">Jump to top</string>
    <string name="scroll_to_bottom_menu">Jump to bottom</string>
    <string name="new_thread_menu">New thread</string>
    <string name="board_thread_gallery_menu">Gallery</string>
    <string name="board_add_to_favorites_menu">Add to favorites</string>
    <string name="favorites_remove_board_menu">Remove from favorites</string>
    <string name="watch_thread_menu">Add to watchlist</string>
    <string name="watch_remove_thread_menu">Remove from watchlist</string>
    <string name="watch_thread_not_found">Couldn\'t remove thread from watchlist</string>
    <string name="catalog_menu">Catalog</string>
    <string name="view_as_grid_menu">View as grid</string>
    <string name="view_as_list_menu">View as list</string>
    <string name="post_reply_all_menu">Reply</string>
    <string name="post_reply_all_quote_menu">Quoted reply</string>
    <string name="copy_text_menu">Copy post text</string>
    <string name="delete_posts_menu">Delete post</string>
    <string name="report_posts_menu">Report post</string>
    <string name="block_posts_menu">Block post</string>
    <string name="translate_no_text">No text found to translate</string>
    <string name="share_image">Share</string>
    <string name="share_url">Share URL</string>
    <string name="download_all_images_to_gallery_menu">Download images</string>
    <string name="download_images_to_gallery_menu">Download image</string>
    <string name="view_image_gallery_menu">Thread gallery</string>
    <string name="image_search_menu">Tineye image search</string>
    <string name="anime_image_search_menu">IQDB image search</string>
    <string name="offline_board_view_menu">Board gallery</string>
    <string name="offline_chan_view_menu">All boards gallery</string>
    <string name="board_last_updated">Last updated %s</string>
    <string name="board_offline_refresh">Cannot refresh, network offline</string>
    <string name="thread_dead">Can\'t refresh, thread is dead</string>
    <string name="thread_closed">Can\'t refresh, thread is closed</string>
    <string name="thread_is_closed">CLOSED</string>
    <string name="thread_is_sticky">STICKY</string>
    <string name="thread_context_select">Done</string>
    <string name="board_no_threads_selected">No threads selected</string>
    <string name="thread_no_posts_selected">No posts selected</string>
    <string name="thread_couldnt_download_image">Couldn\'t download image</string>
    <string name="thread_couldnt_create_pager">Couldn\'t create pager</string>
    <string name="thread_not_found">Thread not found, showing first thread</string>
    <string name="thread_image_download_error">Error downloading thread images</string>
    <string name="thread_no_start_play">Can\'t start play, already at end</string>
    <string name="board_empty_all_boards">Unable to load boards</string>
    <string name="board_empty_watchlist">Thread watchlist empty\n\nWatch a thread to add it here</string>
    <string name="board_empty_favorites">Favorite boards empty\n\nStar a board to add it here</string>
    <string name="translate">Translate post</string>
    <string name="pref_advanced_category">Advanced</string>
    <string name="pref_show_nsfw_boards">NSFW Boards</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_summ_on">On</string>
    <string name="pref_notifications_summ_off">Off</string>
    <string name="pref_use_https">Security</string>
    <string name="pref_use_https_summ_on">Use HTTPS for all connections</string>
    <string name="pref_use_https_summ_off">Don\'t use HTTPS for all connections</string>
    <string name="pref_autoupdate_threads">Auto-Update Threads</string>
    <string name="pref_autoupdate_threads_summ_on">Refresh threads every 30 seconds</string>
    <string name="pref_autoupdate_threads_summ_off">Don\'t automatically refresh threads</string>
    <string name="pref_automatically_manage_watchlist">Auto-Manage Watchlist</string>
    <string name="pref_automatically_manage_watchlist_summ_on">Add and remove threads automatically</string>
    <string name="pref_automatically_manage_watchlist_summ_off">Manually add and remove threads</string>
    <string name="pref_clear_cache">Clear Cache</string>
    <string name="pref_clear_cache_summ">Remove all cached data and images</string>
    <string name="pref_cache_size">Cache size</string>
    <string name="pref_cache_size_summ">Adjust cache size</string>
    <string name="pref_clean_watchlist">Remove dead threads</string>
    <string name="pref_clear_watchlist">Clear Watchlist</string>
    <string name="pref_clear_favorites">Clear favorites</string>
    <string name="pref_reset_to_defaults">Reset</string>
    <string name="pref_reset_to_defaults_summ">Restore all settings to their factory default</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_autoload_images_title">Autoload Thread Images</string>
    <string name="widget_loading">Loading...</string>
    <string name="board_a">Anime &amp; Manga</string>
    <string name="pref_download_images_title">Organize Downloaded Images</string>
    <string name="pref_download_images_summary">Defines how images are organized in the Gallery</string>
    <string name="pref_view_options">View Options</string>
    <string name="sort_order_menu">Sort order</string>
    <string name="font_size_menu">Font Size</string>
    <string name="pref_use_volume_scroll">Volume Key Scrolling</string>
    <string name="pref_use_abbrev_boards">Abbreviated Boards</string>
    <string name="pref_background_data">Background Data</string>
    <string name="pref_background_data_summ_on">Background data enabled when on mobile data plan</string>
    <string name="pref_background_data_summ_off">Background data disabled when on mobile data plan</string>
    <string name="pref_force_english">Force English</string>
    <string name="pref_force_english_summ_on">Use English regardless of phone language</string>
    <string name="pref_force_english_summ_off">Use language of phone, if available</string>
    <string name="pref_download_nomedia">Hide Downloads</string>
    <string name="pref_download_nomedia_summ_on">Downloaded images are hidden from the gallery</string>
    <string name="pref_download_nomedia_summ_off">Downloaded images are visible in the gallery</string>
    <string name="pref_download_location">Download Location</string>
    <string name="pref_download_location_summ">Click to change</string>
    <string name="pref_use_fast_scroll">Fast Scroll</string>
    <string name="pref_hide_last_replies">Hide Last Replies</string>
    <string name="show_hidden_threads">Show Hidden Threads</string>
    <string name="pref_share_image_url">Share Image via URL</string>
    <string name="pref_share_image_url_summ_on">Share URL instead of image file</string>
    <string name="pref_share_image_url_summ_off">Share image file instead of URL</string>
</resources>