<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:chanapps="http://chanapps.com">

    <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_notifications"
            android:summaryOff="@string/pref_notifications_summ_off"
            android:summaryOn="@string/pref_notifications_summ_on"
            android:title="@string/pref_notifications" />

    <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_autoupdate_threads"
            android:summaryOff="@string/pref_autoupdate_threads_summ_off"
            android:summaryOn="@string/pref_autoupdate_threads_summ_on"
            android:title="@string/pref_autoupdate_threads" />

    <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_background_data_on_mobile"
            android:summaryOff="@string/pref_background_data_summ_off"
            android:summaryOn="@string/pref_background_data_summ_on"
            android:title="@string/pref_background_data" />

    <com.chanapps.four.component.CacheSizePreference
            android:key="pref_cache_size"
            android:summary="@string/pref_cache_size_summ"
            android:title="@string/pref_cache_size"
            chanapps:min="32"
            chanapps:unitsLeft=""
            chanapps:unitsRight="MB" />

    <Preference
            android:key="pref_clear_cache"
            android:summary="@string/pref_clear_cache_summ"
            android:title="@string/pref_clear_cache" />


    <PreferenceScreen
            android:key="pref_advanced_category"
            android:title="@string/pref_advanced_category">


        <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_automatically_manage_watchlist"
                android:summaryOff="@string/pref_automatically_manage_watchlist_summ_off"
                android:summaryOn="@string/pref_automatically_manage_watchlist_summ_on"
                android:title="@string/pref_automatically_manage_watchlist" />

        <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_use_https"
                android:summaryOff="@string/pref_use_https_summ_off"
                android:summaryOn="@string/pref_use_https_summ_on"
                android:title="@string/pref_use_https" />

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_share_image_url"
                android:summaryOff="@string/pref_share_image_url_summ_off"
                android:summaryOn="@string/pref_share_image_url_summ_on"
                android:title="@string/pref_share_image_url" />

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_download_nomedia"
                android:summaryOff="@string/pref_download_nomedia_summ_off"
                android:summaryOn="@string/pref_download_nomedia_summ_on"
                android:title="@string/pref_download_nomedia" />

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_force_english"
                android:summaryOff="@string/pref_force_english_summ_off"
                android:summaryOn="@string/pref_force_english_summ_on"
                android:title="@string/pref_force_english" />

        <Preference
                android:key="pref_download_location"
                android:summary="@string/pref_download_location_summ"
                android:title="@string/pref_download_location" />

        <ListPreference
                android:defaultValue="@string/pref_download_images_default_value"
                android:entries="@array/pref_download_images_entries"
                android:entryValues="@array/pref_download_images_entry_values"
                android:key="pref_download_images"
                android:summary="@string/pref_download_images_summary"
                android:title="@string/pref_download_images_title" />

        <Preference
                android:key="pref_reset_to_defaults"
                android:summary="@string/pref_reset_to_defaults_summ"
                android:title="@string/pref_reset_to_defaults" />

    </PreferenceScreen>

    <Preference
            android:key="pref_about"
            android:title="@string/about_activity" />

</PreferenceScreen>
