<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/search_menu"
            android:actionViewClass="android.widget.SearchView"
            android:icon="@drawable/action_search"
            android:showAsAction="collapseActionView"
            android:title="@string/search_title" />
    <item
            android:id="@+id/refresh_menu"
            android:icon="@drawable/navigation_refresh"
            android:title="@string/refresh_board_menu" />
    <item
            android:id="@+id/new_thread_menu"
            android:icon="@drawable/content_new"
            android:title="@string/new_thread_menu" />
    <item
            android:id="@+id/scroll_to_bottom_menu"
            android:icon="@drawable/av_next"
            android:title="@string/scroll_to_bottom_menu"
            android:visible="false" />


    <item
            android:id="@+id/clean_watchlist_menu"
            android:icon="@drawable/content_remove"
            android:title="@string/pref_clean_watchlist"
            android:visible="false" />
    <item
            android:id="@+id/clear_watchlist_menu"
            android:icon="@drawable/content_discard"
            android:title="@string/pref_clear_watchlist"
            android:visible="false" />

    <item
            android:id="@+id/board_add_to_favorites_menu"
            android:icon="@drawable/content_new"
            android:title="@string/board_add_to_favorites_menu" />
    <item
            android:id="@+id/favorites_remove_board_menu"
            android:icon="@drawable/rating_important"
            android:title="@string/favorites_remove_board_menu" />
    <item
            android:id="@+id/clear_favorites_menu"
            android:icon="@drawable/content_discard"
            android:title="@string/pref_clear_favorites"
            android:visible="false" />

    <item
            android:id="@+id/jump_menu"
            android:icon="@drawable/content_import_export"
            android:title="@string/jump_menu">
        <menu>
            <item
                    android:id="@+id/scroll_to_top_menu"
                    android:icon="@drawable/av_previous"
                    android:title="@string/scroll_to_top_menu" />
            <item
                    android:id="@+id/scroll_to_bottom_menu"
                    android:icon="@drawable/av_next"
                    android:title="@string/scroll_to_bottom_menu" />
        </menu>
    </item>

    <item
            android:id="@+id/view_options_menu"
            android:icon="@drawable/collections_view_as_grid"
            android:title="@string/pref_view_options">
        <menu>
            <item
                    android:id="@+id/theme_menu"
                    android:icon="@drawable/device_access_brightness_high"
                    android:title="@string/pref_theme_title" />

            <item
                    android:id="@+id/view_as_grid_menu"
                    android:icon="@drawable/collections_view_as_grid"
                    android:title="@string/view_as_grid_menu" />
            <item
                    android:id="@+id/view_as_list_menu"
                    android:icon="@drawable/collections_view_as_list"
                    android:title="@string/view_as_list_menu"
                    android:visible="false" />
            <item
                    android:id="@+id/sort_order_menu"
                    android:icon="@drawable/collections_sort_by_size"
                    android:title="@string/sort_order_menu" />
            <item
                    android:id="@+id/show_hidden_threads_menu"
                    android:icon="@drawable/ic_action_undo"
                    android:title="@string/show_hidden_threads" />
            <item
                    android:id="@+id/offline_board_view_menu"
                    android:icon="@drawable/device_access_storage"
                    android:title="@string/offline_board_view_menu"
                    android:visible="false" />
            <item
                    android:id="@+id/offline_chan_view_menu"
                    android:icon="@drawable/device_access_storage"
                    android:title="@string/offline_chan_view_menu"
                    android:visible="false" />

            <item
                    android:id="@+id/use_abbrev_boards_menu"
                    android:icon="@drawable/av_return_from_full_screen"
                    android:title="@string/pref_use_abbrev_boards"
                    android:visible="false" />

            <item
                    android:id="@+id/hide_last_replies_menu"
                    android:icon="@drawable/social_chat"
                    android:title="@string/pref_hide_last_replies"
                    android:visible="false" />

            <item
                    android:id="@+id/use_fast_scroll_menu"
                    android:icon="@drawable/content_import_export"
                    android:title="@string/pref_use_fast_scroll" />

            <item
                    android:id="@+id/use_volume_scroll_menu"
                    android:icon="@drawable/device_access_volume_on"
                    android:title="@string/pref_use_volume_scroll" />

            <item
                    android:id="@+id/blocklist_menu"
                    android:icon="@drawable/collections_labels"
                    android:title="@string/blocklist_title" />

        </menu>
    </item>

    <item
            android:id="@+id/nsfw_menu"
            android:icon="@drawable/geomicons_heart"
            android:title="@string/pref_show_nsfw_boards" />

    <item
            android:id="@+id/board_rules_menu"
            android:icon="@drawable/action_help"
            android:title="@string/board_rules_menu"
            android:visible="false" />

    <item
            android:id="@+id/global_rules_menu"
            android:icon="@drawable/action_about"
            android:title="@string/global_rules_menu" />

    <item
            android:id="@+id/web_menu"
            android:icon="@drawable/location_web_site"
            android:title="@string/direct_web_menu" />

</menu>
