<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/search_menu"
            android:actionViewClass="android.widget.SearchView"
            android:icon="@drawable/action_search"
            android:showAsAction="collapseActionView"
            android:title="@string/search_title" />
    <item
            android:id="@+id/thread_share_menu"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:enabled="true"
            android:icon="@drawable/ic_menu_share_holo_light"
            android:title="@string/share_image" />
    <item
            android:id="@+id/refresh_menu"
            android:icon="@drawable/navigation_refresh"
            android:title="@string/refresh_board_menu" />
    <item
            android:id="@+id/post_reply_all_menu"
            android:icon="@drawable/social_reply"
            android:title="@string/post_reply_all_menu" />
    <item
            android:id="@+id/download_all_images_to_gallery_menu"
            android:icon="@drawable/av_download"
            android:title="@string/download_all_images_to_gallery_menu" />

    <item
            android:id="@+id/watch_thread_menu"
            android:icon="@drawable/rating_important"
            android:title="@string/watch_thread_menu" />
    <item
            android:id="@+id/watch_remove_thread_menu"
            android:icon="@drawable/content_discard"
            android:title="@string/watch_remove_thread_menu"
            android:visible="false" />
    <item
            android:id="@+id/view_image_gallery_menu"
            android:icon="@drawable/content_picture_light"
            android:title="@string/view_image_gallery_menu"
            android:visible="false" />

    <item
            android:id="@+id/jump_menu"
            android:icon="@drawable/content_import_export"
            android:title="@string/jump_menu">
        <menu>
            <item
                    android:id="@+id/scroll_to_top_menu"
                    android:icon="@drawable/av_previous"
                    android:title="@string/scroll_to_top_menu" />
            <item
                    android:id="@+id/scroll_to_bottom_menu"
                    android:icon="@drawable/av_next"
                    android:title="@string/scroll_to_bottom_menu" />
        </menu>
    </item>

    <item
            android:id="@+id/view_options_menu"
            android:icon="@drawable/collections_view_as_grid"
            android:title="@string/pref_view_options">
        <menu>

            <item
                    android:id="@+id/theme_menu"
                    android:icon="@drawable/device_access_brightness_high"
                    android:title="@string/pref_theme_title" />

            <item
                    android:id="@+id/font_size_menu"
                    android:icon="@drawable/content_edit"
                    android:title="@string/font_size_menu" />
            <item
                    android:id="@+id/autoload_images_menu"
                    android:icon="@drawable/content_picture_light"
                    android:title="@string/pref_autoload_images_title" />
            <item
                    android:id="@+id/use_fast_scroll_menu"
                    android:icon="@drawable/content_import_export"
                    android:title="@string/pref_use_fast_scroll" />

            <item
                    android:id="@+id/use_volume_scroll_menu"
                    android:icon="@drawable/device_access_volume_on"
                    android:title="@string/pref_use_volume_scroll" />

            <item
                    android:id="@+id/blocklist_menu"
                    android:icon="@drawable/collections_labels"
                    android:title="@string/blocklist_title" />

        </menu>
    </item>

    <item
            android:id="@+id/web_menu"
            android:icon="@drawable/location_web_site"
            android:title="@string/direct_web_menu" />

    <item
            android:id="@+id/play_thread_menu"
            android:icon="@drawable/av_play"
            android:title="@string/play_thread_menu" />
</menu>
