<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:minHeight="64dp"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:textColor="@color/blue_base"
            android:textSize="22dp" />

    <View
            android:id="@+id/titleDivider"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/blue_base" />

    <TextView
            style="@style/PostReplyEditText"
            android:layout_marginTop="16dp"
            android:padding="0dp"
            android:text="@string/delete_post_title_confirm"
            android:textSize="18dp"></TextView>

    <EditText
            android:id="@+id/delete_post_password"
            style="@style/PostReplyEditText"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/delete_post_password_hint"
            android:imeOptions="actionNone"
            android:inputType="textVisiblePassword|numberPassword"
            android:maxLength="8"></EditText>

    <CheckBox
            android:id="@+id/delete_post_only_image_checkbox"
            style="@style/PostReplyCheckbox"
            android:text="@string/delete_post_only_image" />

</LinearLayout>
