<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/widget_board_coverflow_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/widget_rounded_background">

    <StackView
            android:id="@+id/stack_view_coverflow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:gravity="fill"
            android:loopViews="true" />

    <TextView
            android:id="@+id/stack_view_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/widget_title_gradient_bg"
            android:text="@string/widget_loading"
            android:textColor="@color/PaletteWhite"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/board_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/widget_title_button_selector"
            android:paddingLeft="8dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="5dp"
            android:text="@string/board_a"
            android:textColor="@color/PaletteWhite"
            android:textSize="@dimen/widget_board_coverflowcard_textSize"
            android:textStyle="bold" />

    <ImageView
            android:id="@+id/refresh_board"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_marginTop="4dp"
            android:layout_marginRight="230dp"
            android:contentDescription="@string/refresh_board_menu"
            android:paddingLeft="24dp"
            android:paddingBottom="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/widget_refresh_button_selector" />

    <ImageView
            android:id="@+id/configure"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/settings_menu"
            android:paddingLeft="24dp"
            android:paddingBottom="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/widget_configure_button_selector" />

</FrameLayout>
